@@ -1,3 +1,8 @@
+2008-11-12  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* bin/applygeo.c: New utility for applying georeferencing to an 
+	existing file (written by jeskynar@hotmail.com and myself).
+
 2008-10-24  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* bin/listgeo.c: Improve tfw error reporting and user hints (#2)
